# photo-organizer

./: .gitignore  CLAUDE.md  README.md  config.yaml  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/: branch-protection.md
.github/workflows/: ci.yml
image_organizer/: __init__.py  cli.py  config.py  defaults.yaml  file_ops.py  geocoder.py  metadata.py  organizer.py
tests/: conftest.py  test_file_ops.py  test_geocoder.py  test_metadata.py  test_organizer.py
